# jarp

./: CHANGELOG.md  README.md  mkdocs.yaml  noxfile.py  pyproject.toml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/release-please/: .manifest.json
benches/: flatten.py  jit.py
docs/: README.md
docs/benches/: flatten.md  jit.md
docs/guides/: call-wrappers.md  getting-started.md  pytree-workflows.md  warp.md
docs/reference/: README.md
docs/reference/jarp/: README.md
docs/reference/jarp/lax/: README.md
docs/reference/jarp/tree/: README.md
docs/reference/jarp/tree/attrs/: README.md
docs/reference/jarp/tree/codegen/: README.md
docs/reference/jarp/tree/prelude/: README.md
docs/reference/jarp/utils/: README.md
docs/reference/jarp/warp/: README.md  types.md
src/jarp/: __init__.py  __init__.pyi  _jit.py
src/jarp/_jit/: __init__.pyi  _fallback_jit.py  _filter_jit.py
src/jarp/lax/: __init__.py  __init__.pyi  _control.py  _while_loop.py
src/jarp/toolz/: __init__.pyi  _compose.py
src/jarp/tree/: __init__.py  __init__.pyi  _define.py  _field_specifiers.py  _filters.py  _ravel.py
src/jarp/tree/_flatten/: __init__.pyi  _codegen.py  _fieldz.py  _generic.py  _types.py
src/jarp/tree/attrs/: __init__.py  __init__.pyi  _define.py  _field_specifiers.py  _register.py  _utils.py
src/jarp/tree/codegen/: __init__.py  __init__.pyi  _codegen.py  _compile.py  _utils.py
src/jarp/tree/prelude/: __init__.py  __init__.pyi  _method.py  _partial.py  _prelude.py  _proxy.py  _utils.py  _warp.py
src/jarp/utils/: __init__.py  __init__.pyi  _is_array.py  _suppress_jax_errors.py
src/jarp/warp/: __init__.py  __init__.pyi  _jax_callable.py  _jax_kernel.py  _to_warp.py  _to_warp.pyi  _types.py  _utils.py  types.py  types.pyi
tests/: conftest.py  test_jit.py
tests/api/: test_package_exports.py  test_public_api.py
tests/jit/: test_fallback_jit.py  test_filter_jit.py
tests/lax/: test_branching.py  test_loops.py
tests/toolz/: test_compose_left.py
tests/tree/: test_codegen.py  test_define.py  test_field_specifiers.py  test_filters.py  test_frozen.py  test_partial.py  test_prelude.py  test_proxy.py  test_ravel.py  test_register_generic.py  test_registration.py
tests/tree/attrs/: test_define.py  test_field_specifiers.py  test_register_fieldz.py
tests/tree/codegen/: test_codegen.py
tests/tree/core/: test_filters.py  test_ravel.py
tests/tree/prelude/: test_method.py  test_partial.py  test_proxy.py  test_proxy_and_prelude.py
tests/utils/: test_suppress_jax_errors.py
tests/warp/: test_jax_callable.py  test_jax_kernel.py  test_to_warp.py  test_types.py
tests/warp/jax/: test_jax_callable.py  test_jax_kernel.py
