#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "jarp"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=25",
  "fieldz>=0.1",
  "jax>=0.9",
  "jaxtyping>=0.3",
  "lazy-loader>=0.1",
  "warp-lang>=1.12",
  "wrapt>=2"
]
dynamic = ["version"]

[project.urls]
# ref: <https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels>
"Changelog" = "https://github.com/liblaf/jarp/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/jarp/"
"Funding" = "https://github.com/liblaf/jarp?sponsor=1"
"Homepage" = "https://github.com/liblaf/jarp"
"Issue Tracker" = "https://github.com/liblaf/jarp/issues"
"Release Notes" = "https://github.com/liblaf/jarp/releases"
"Source Code" = "https://github.com/liblaf/jarp"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.9"]
cuda13 = ["jax[cuda13]>=0.9"]

[dependency-groups]
dev = ["equinox>=0.13"]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.30"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = [
  "pytest>=9",
  "pytest-cov>=7",
  "pytest-randomly>=4",
  { include-group = "dev" }
]
typing = ["toolz-stubs>=0.3"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/jarp/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/jarp"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "jarp"

[[tool.importlinter.contracts]]
ancestors = ["jarp"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
conflicts = [[{ extra = "cuda12" }, { extra = "cuda13" }]]
default-groups = "all"
